Added basic styling

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 
 <head>
     <title>YouTube Downloader</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet"> 
 </head>
 
 <body>
     <h1 class="heading">YouTube Downloader</h1>
-    <input class ="URL-input" placeholder="Insert YouTube video URL.">
+    <input class ="URL-input" placeholder="Insert YouTube video URL">
+    <div class="div-button">
     <button class="convert-button">convert</button>
+    </div>
 </body>
 
 </html>
