--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 
 <body>
-    <h1 class="heading">YouTube Downloader</h1>
-    <input class ="URL-input" placeholder="Insert YouTube video URL">
-    <div class="div-button">
-    <button class="convert-button">convert</button>
+    <div class ="container">
+        <h1 class="heading">You<span style="color: red; -webkit-text-stroke: 0.25px black;">Tube</span> <br>
+            Downloader
+        </p></h1>
+        <input class ="URL-input" placeholder="Insert YouTube video URL">
+        <div class="div-button">
+            <button class="convert-button">convert</button>
+        </div>
     </div>
 </body>
 
