--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>YouTube Downloader</title>
+    <title>- YouTube Downloader -</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet"> 
 </head>
